<resources>
    <string name="app_name">Audio Highlighter</string>
    <string name="play_btn_text">Play</string>
    <string name="pause_btn_text">Pause</string>
    <string name="mark_btn_text">Set Timestamp</string>
    <string name="nextstamp_btn_text">Next Timestamp</string>
    <string name="prevstamp_btn_text">Prev Timestamp</string>
    <string name="restart_btn_text">Restart</string>
    <string name="mark_toast_text">Timestamp Saved: </string>
    <string name="record_activity_text">Record New</string>
    <string name="record_activity_label">Record Audio</string>
    <string name="start_record_btn_text">Record</string>
    <string name="stop_record_btn_text">Stop</string>
</resources>
