<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp">
            <TextView
                android:id="@+id/curr_time_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:text="00:00:00"/>
            <SeekBar
                android:id="@+id/seekbar_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/curr_time_text_view"
                android:layout_marginBottom="64dp"/>

            <LinearLayout
                android:id="@+id/stampnav_linear_layout_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/seekbar_view"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/prevstamp_button_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/prevstamp_btn_text"/>

                <Button
                    android:id="@+id/nextstamp_button_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/nextstamp_btn_text"/>

            </LinearLayout>

            <Button
                android:id="@+id/play_button_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/stampnav_linear_layout_view"
                android:layout_marginBottom="24dp"
                android:text="@string/play_btn_text"/>

            <Button
                android:id="@+id/mark_button_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/play_button_view"
                android:layout_marginBottom="24dp"
                android:text="@string/mark_btn_text"/>

            <Button
                android:id="@+id/restart_button_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/mark_button_view"
                android:layout_marginBottom="16dp"
                android:text="@string/restart_btn_text"/>

            <Button
                android:id="@+id/record_activity_button_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/restart_button_view"
                android:text="@string/record_activity_text"/>

        </RelativeLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>